# imgui-docking-example

./: .clang-tidy  CMakeLists.txt
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h
src/Engine/Window/: Dockspace.cpp  Dockspace.h  Window.cpp  Window.h
src/Windows/Properties/: Properties.h  PropertiesTest.cpp
src/Windows/Viewport/: Viewport.cpp  Viewport.h
src/libs/: CMakeLists.txt
src/libs/Coloforma/: Colours.cpp  Colours.h  Println.cpp  Println.h
src/libs/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h
